--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ ul.nav a:hover { background-color: #fff !important; }
                 <img class="card-img-top" src="https://i.ibb.co/JqNj7Vd/chatbot-chat-application-artifi.jpg" alt="Card image cap"style="width:50vh;" >
                 <div class="card-body">
                     
-                <h5 class="card-title" style="text-align: center; padding-top: 5px;">Contact Us</h5>
+                <h5 class="card-title" style="text-align: center; padding-top: 5px;">Compare Loans</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. </p>
                 <div class="text-center" style="padding-bottom: 5px;"><button type="button" class="btn btn-info">Info</button></div>
                 </div>
