--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ ul.nav a:hover { background-color: #fff !important; }
     <div class="container-fluid">
      
       <ul class="nav navbar-nav">
-        <li><a href="#">Logo</a></li>
+        <li><img src="https://i.ibb.co/Q6zXGvf/logo.jpg" width="90px"><bdi style="color: darkblue; font-size: 18px;"><strong>&nbsp;Loan Me</strong></bdi></img></li>
         <li class="active"><a href="#"><strong>Home</strong></a></li>
         <li><a href="#"><strong>About</strong></a></li>
         <li><a href="#"><strong>Services</strong></a></li>
