--- a/loans.html
+++ b/loans.html
@@ -58,7 +58,7 @@
                      </select>
                   </div>
                   <div class="col-auto">
-                     <button type="submit" class="btn btn-primary" style="position: relative; top: 25px; left: 10px;" onclick="onClick()">
+                     <button type="button" class="btn btn-primary" style="position: relative; top: 25px; left: 10px;" onclick="onClick()">
                         Submit
                      </button>
                   </div>
